--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>veganvegan</title>
+    <title>L'Osteria Bella</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Italiana|Open+Sans" rel="stylesheet">
 </head>
@@ -13,15 +13,13 @@
 
     <header>
 
-        <div id="header-bg">
-            <figure id="logo"></figure>
-            <div id="menuknap">☰</div>
-            <ul id="menu" class="hidden">
-                <li><a href="">About us</a></li>
-                <li><a href="">Menu</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </div>
+        <img src="Artboard%20vinogglasB-orange.svg" alt="logo">
+        <div id="menuknap">☰</div>
+        <ul id="menu" class="hidden">
+            <li><a href="">About us</a></li>
+            <li><a href="">Menu</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
         <div class="navbar">
             <a href="#home">About us</a>
             <a href="#news">Menu</a>
@@ -29,7 +27,6 @@
         </div>
 
     </header>
-
     <div id="parallax-1" class="bg-img">
 
     </div>
