lidt mere orden i filerne

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <img src="Artboard%20vinogglasB-orange.svg" alt="logo">
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
-            <li><a href="">About us</a></li>
-            <li><a href="">Menu</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="">ABOUT US</a></li>
+            <li><a href="">MENU</a></li>
+            <li><a href="">CONTACT</a></li>
         </ul>
         <div class="navbar">
-            <a href="#home">About us</a>
-            <a href="#news">Menu</a>
-            <a href="#contact">Contact</a>
+            <a href="#home">ABOUT US</a>
+            <a href="#news">MENUCARD</a>
+            <a href="#contact">CONTACT US</a>
         </div>
 
     </header>
