--- a/menukort.html
+++ b/menukort.html
@@ -83,8 +83,7 @@
             if (erSkjult == true) {
                 document.querySelector("#menuknap").textContent = "☰";
             } else {
-                document.querySelector("#menuknap").innerHTML = "<a href="
-                https: //icons8.com/icon/85443/multiply">Multiply icon by Icons8</a>";
+                document.querySelector("#menuknap").innerHTML = "&times;";
             }
         }
 
