--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>L'Osteria Bella</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Italiana|Open+Sans" rel="stylesheet">
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
 </head>
 
 <body>
@@ -16,41 +17,58 @@
         <img src="Artboard%20vinogglasB-orange.svg" alt="logo">
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
-            <li><a href="">ABOUT US</a></li>
-            <li><a href="">MENU</a></li>
-            <li><a href="">CONTACT</a></li>
+            <li><a href="#text-1">ABOUT US</a></li>
+            <li><a href="menukort.html">MENU</a></li>
+            <li><a href="#text-3">CONTACT</a></li>
         </ul>
         <div class="navbar">
-            <a href="#home">ABOUT US</a>
-            <a href="#news">MENUCARD</a>
-            <a href="#contact">CONTACT US</a>
+
+            <a href="#text-3">CONTACT US</a>
+            <a href="menukort.html">MENU</a>
+            <a href="#text-1">ABOUT US</a>
         </div>
 
     </header>
     <div id="parallax-1" class="bg-img">
-
+        <img src="heading.svg">
     </div>
 
-    <div class="text">
-        <h2>OUR PHILOSOPHY</h2>
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
-        <button>BOOK A TABLE</button>
+    <div id="text-1" class="text">
+        <h2>ABOUT US</h2>
+        <p>L'Osteria Bella is a cozy small italian bistro located in the heart of Copenhagen. We like to think that delicious food doesn't have to be expensive, that is why we like to call ourselfs "The fancy italian bistro, for small budgets".</p>
+        <p>L'Osteria Bella opened up for the first time in 2019, and we have already a handfull of loyal costumers. Wanna know why? Then come visit us!</p>
+        <ul>
+            <i class="fa fa-map-marker"></i> Lillegade 10, 1234 København K <br>
+            <i class='far'>&#xf133;</i> Every day 10.00-22.00
 
+        </ul>
+        <a href="">BOOK A TABLE</a>
     </div>
 
     <div id="parallax-2" class="bg-img"></div>
-    <div class="text">
+    <div id="text-2" class="text">
         <h2>THE KITCHEN</h2>
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-        <button>THE MENU</button>
+        <p>
+            Our philosophy is "less is more", meaning that our menu might be short, but we put extra love and care into our favourite italian dishes. We like to keep it simple, by serving the dishes you are familiar with, but with a 'Bella'-twist.</p>
+        <p>
+            We focus alot on organic, local- and homegrown ingredients, so that the food isn't just delicious, fresh and flavourful, but also environmental friendly.
+        </p>
+
+        <a href="menukort.html">MENU CARD</a>
     </div>
 
     <div id="parallax-3" class="bg-img"></div>
 
-    <div class="text">
+    <div id="text-3" class="text">
         <h2>CONTACT US</h2>
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-        <button>FIND US ON GOOGLE</button>
+        <p>If you have any questions or want to know more about L'Osteria Bella, you are more than welcome to contact us. Below you will find our contact information.</p>
+        <ul>
+            <i class="fa fa-phone"></i> +451234567<br>
+            <i class='far'>&#xf0e0;</i> info@osteriabella.com<br>
+            <i class='far'>&#xf133;</i> Monday-Sunday 10.00-22.00<br>
+            <i class="fa fa-map-marker"></i> Address: Lillegade 10, 1234 Copenhagen K
+        </ul>
+        <a href="">FIND US ON GOOGLE MAPS</a>
 
     </div>
 
@@ -72,9 +90,10 @@
             if (erSkjult == true) {
                 document.querySelector("#menuknap").textContent = "☰";
             } else {
-                document.querySelector("#menuknap").textContent = "☰";
+                document.querySelector("#menuknap").innerHTML = "&times;";
             }
         }
+
     </script>
 
 </body>
