--- a/menukort.html
+++ b/menukort.html
@@ -24,45 +24,42 @@
         <img src="Artboard%20vinogglasB-orange.svg" alt="logo">
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
-            <li><a href="">ABOUT US</a></li>
-            <li><a href="">MENU</a></li>
-            <li><a href="">CONTACT</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="index.html#text-1">ABOUT US</a></li>
+            <li><a href="index.html#text-3">CONTACT</a></li>
         </ul>
         <div class="navbar">
-            <a href="#home">ABOUT US</a>
-            <a href="#news">MENUCARD</a>
-            <a href="#contact">CONTACT US</a>
+            <a href="index.html#text-3">CONTACT US</a>
+            <a href="index.html#text-1">ABOUT US</a>
+            <a href="index.html">HOME</a>
         </div>
 
     </header>
 
     <div id="parallax-1" class="bg-img">
-
+        <img src="heading.svg">
     </div>
 
+    <h1>OUR MENU</h1>
+
     <nav>
-        <button class="filter valgt" data-hold="alle">Alle</button>
-        <button class="filter" data-hold="starters">Starters</button>
-        <button class="filter" data-hold="pasta">Pasta</button>
-        <button class="filter" data-hold="pizza">Pizza</button>
-        <button class="filter" data-hold="wine">Wine</button>
+        <button class="filter valgt" data-hold="alle">ALL</button>
+        <button class="filter" data-hold="starters">STARTERS</button>
+        <button class="filter" data-hold="pasta">PASTA</button>
+        <button class="filter" data-hold="pizza">PIZZA</button>
+        <button class="filter" data-hold="wine">WINE</button>
 
 
     </nav>
     <main>
-        <h1>Menu</h1>
 
 
         <section id="liste">
         </section>
     </main>
 
-    <!--
-    <footer>
-        <p>Addresse:<br>Grønnegade 97 <br> 1234 København K</p>
-        <p>Åbningstider: <br> Mandag-fredag 10.30-22.00 <br>Lørdag 12.00-23.00</p>
-    </footer>
--->
+
+
 
 
     <script>
@@ -158,7 +155,6 @@
                 visRetter();
             }
         }
-
     </script>
 
 
