--- a/index.html
+++ b/index.html
@@ -14,24 +14,26 @@
 
     <header>
 
-        <img src="logoHeader.svg" alt="logo">
+        <img src="img-index/logoHeader.svg" alt="logo">
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
             <li><a href="#text-1">ABOUT</a></li>
             <li><a href="menukort.html">MENU</a></li>
             <li><a href="#text-3">CONTACT</a></li>
+            <li><a href="">BOOK</a></li>
         </ul>
         <div class="navbar">
 
             <a href="#text-3">CONTACT</a>
             <a href="menukort.html">MENU</a>
             <a href="#text-1">ABOUT US</a>
+            <a href="">BOOK</a>
         </div>
 
     </header>
     <div id="parallax-1" class="bg-img">
         <figure id="welcometo">
-            <img src="heading.svg" alt="velkommen til">
+            <img src="img-index/heading.svg" alt="velkommen til">
         </figure>
     </div>
 
@@ -112,6 +114,7 @@
                 document.querySelector("#menuknap").innerHTML = "&times;";
             }
         }
+
     </script>
 
 </body>
