--- a/menukort.html
+++ b/menukort.html
@@ -15,23 +15,26 @@
 
     <header>
 
-        <img src="logoHeader.svg" alt="logo">
+        <img src="img-index/logoHeader.svg" alt="logo">
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
             <li><a href="index.html">HOME</a></li>
             <li><a href="index.html#text-1">ABOUT US</a></li>
             <li><a href="index.html#text-3">CONTACT</a></li>
+            <li><a href="index.html#text-3">BOOK</a></li>
         </ul>
         <div class="navbar">
             <a href="index.html#text-3">CONTACT US</a>
             <a href="index.html#text-1">ABOUT US</a>
+            <a href="">BOOK</a>
             <a href="index.html">HOME</a>
+
         </div>
 
     </header>
 
     <div id="parallax-1" class="bg-img">
-        <img src="heading.svg">
+        <img src="img-index/heading.svg">
     </div>
 
     <h1>OUR MENU</h1>
@@ -144,7 +147,6 @@
                 visRetter();
             }
         }
-
     </script>
 
 
