--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
         <div class="kontakt">
             <i class="material-icons">
                 phone
-            </i> +451234567<br>
+            </i> +451234567
             <i class="material-icons">
                 email
-            </i> info@osteriabella.com<br>
+            </i> info@osteriabella.com
             <i class="material-icons">
                 watch_later
-            </i> Monday-Sunday 10.00-22.00<br>
+            </i> Monday-Sunday 10.00-22.00
             <i class="material-icons">
                 room
-            </i> Lillegade 10, 1234 Copenhagen K
+            </i> Lillegade 10, 1234 Kbh
 
         </div>
 
