nu også valideret uden fejl

--- a/menukort.html
+++ b/menukort.html
@@ -34,7 +34,7 @@
     </header>
 
     <div id="parallax-1" class="bg-img">
-        <img src="img-index/heading.svg">
+        <img src="img-index/heading.svg" alt="welcometo">
     </div>
 
     <h1>OUR MENU</h1>
