Nu med ændringer efter ekspert-tests

--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
 
     <header>
 
-        <img src="img-index/logoHeader.svg" alt="logo">
+        <div class="logoheader">
+            <a href="index.html">
+                <img src="img-index/logoMedBaggrund.svg" alt="logo">
+            </a>
+        </div>
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
             <li><a href="#text-1">ABOUT</a></li>
             <li><a href="menukort.html">MENU</a></li>
             <li><a href="#text-3">CONTACT</a></li>
-            <li><a href="">BOOK</a></li>
         </ul>
         <div class="navbar">
-
             <a href="#text-3">CONTACT</a>
             <a href="menukort.html">MENU</a>
             <a href="#text-1">ABOUT US</a>
-            <a href="">BOOK</a>
         </div>
 
     </header>
@@ -39,8 +40,8 @@
 
     <div id="text-1" class="text">
         <h2>ABOUT US</h2>
-        <p>L'Osteria Bella is a cozy small italian bistro located in the heart of Copenhagen. We like to think that delicious food doesn't have to be expensive, that is why we like to call ourselfs "The fancy italian bistro, for small budgets".</p>
-        <p>L'Osteria Bella opened up for the first time in 2019, and we have already a handfull of loyal costumers. Wanna know why? Then come visit us!</p>
+        <p>L'Osteria Bella is a cozy small italian bistro located in the heart of Copenhagen. We like to think that delicious food doesn't have to be expensive, that is why we like to call ourselfs "The fancy italian bistro, for small budgets".
+            L'Osteria Bella opened up for the first time in 2019, and we have already a handfull of loyal costumers. Wanna know why? Then come visit us!</p>
         <a href="">BOOK A TABLE</a>
         <div class="information">
             <div class="adress">
@@ -61,8 +62,8 @@
     <div id="text-2" class="text">
         <h2>THE KITCHEN</h2>
         <p>
-            Our philosophy is "less is more", meaning that our menu might be short, but we put extra love and care into our favourite italian dishes. We like to keep it simple, by serving the dishes you are familiar with, but with a 'Bella'-twist.</p>
-        <p>
+            Our philosophy is "less is more", meaning that our menu might be short, but we put extra love and care into our favourite italian dishes. We like to keep it simple, by serving the dishes you are familiar with, but with a 'Bella'-twist.
+
             We focus alot on organic, local- and homegrown ingredients, so that the food isn't just delicious, fresh and flavourful, but also environmental friendly.
         </p>
 
@@ -114,7 +115,6 @@
                 document.querySelector("#menuknap").innerHTML = "&times;";
             }
         }
-
     </script>
 
 </body>
