Tilføjet lidt animationer

--- a/menukort.html
+++ b/menukort.html
@@ -21,14 +21,14 @@
         </div>
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
-            <li><a href="#text-1">ABOUT</a></li>
+            <li><a href="index.html#text-1">ABOUT</a></li>
             <li><a href="menukort.html">MENU</a></li>
-            <li><a href="#text-3">CONTACT</a></li>
+            <li><a href="index.html#text-3">CONTACT</a></li>
         </ul>
         <div class="navbar">
-            <a href="#text-3">CONTACT</a>
+            <a href="index.html#text-3">CONTACT</a>
             <a href="menukort.html">MENU</a>
-            <a href="#text-1">ABOUT US</a>
+            <a href="index.html#text-1">ABOUT US</a>
         </div>
 
     </header>
