ændret billed-format fra svg til png/jpg

--- a/menukort.html
+++ b/menukort.html
@@ -40,7 +40,7 @@
 -->
 
     <div class="headline">
-        <img src="ourMenucard.svg" alt="Headline Menu">
+        <img src="menukort-billeder/ourMenucard.svg" alt="Headline Menu">
     </div>
 
     <nav>
