--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <div class="information">
             <div class="adress">
 
-                <i class="material-icons">room</i>Lillegade 10, 1234 København K
+                <i class="material-icons">room</i><small>Lillegade 10, 1234 København K</small>
 
             </div>
             <div class="adress">
                 <i class="material-icons">
                     watch_later
-                </i> Every day 10.00-22.00
+                </i> <small>Every day 10.00-22.00</small>
             </div>
         </div>
 
@@ -77,18 +77,17 @@
         <p>If you have any questions or want to know more about L'Osteria Bella, you are more than welcome to contact us. Below you will find our contact information.</p>
 
         <div class="kontakt">
-            <i class="material-icons">
-                phone
-            </i> +451234567
+            <i class="material-icons">phone
+            </i><small>+451234567 | +4542635050</small>
             <i class="material-icons">
                 email
-            </i> info@osteriabella.com
+            </i> <small>info@osteriabella.com</small>
             <i class="material-icons">
                 watch_later
-            </i> Monday-Sunday 10.00-22.00
+            </i> <small>Monday-Sunday 10.00-22.00</small>
             <i class="material-icons">
                 room
-            </i> Lillegade 10, 1234 Kbh
+            </i><small>Lillegade 10, 1234 Kbh</small>
 
         </div>
 
